# Jarvis

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
assets/: config.json
src/: App.tsx  audio_input.rs  get_text.rs  main.rs  main.tsx  models.rs  send_to_llm.rs  styles.css  transform_text.rs  tts.rs  types.ts  utils.rs  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_input.rs  get_text.rs  lib.rs  main.rs  models.rs  run_jarvis.rs  send_to_llm.rs  transform_text.rs  tts.rs  utils.rs
src/components/: ChatPane.tsx  HistoryPane.tsx  OnboardingOverlay.tsx  SettingsPane.tsx  TopBar.tsx
src/lib/: tauri.ts
